# GhostMap

./: .gitignore  Basemap_OpenBuildings_Composite.tif  CMakeLists.txt  CMakePresets.json  Convert.py  Dockerfile  Main.py  OpenBuildings_2km_Bangalore.tif  PDTG.cpp  README.md  ReadyFlagWriter.cpp  ReadyFlagWriter.h  TcpServer.cpp  TcpServer.h  classmap.txt  image.py  main.cpp  meta.json  projector.cp312-win_amd64.pyd  run.sh  setup.py  sim.py  sim2.py  test.py
qml/: Main.qml
qml/QmlComponents/: RasterMap.qml  SetupDialog.qml  qmldir
test/: frame1.json  frame1.txt  frame10.json  frame10.txt  frame11.json  frame11.txt  frame12.json  frame12.txt  frame13.json  frame13.txt  frame14.json  frame14.txt  frame15.json  frame15.txt  frame16.json  frame16.txt  frame17.json  frame17.txt  frame18.json  frame18.txt  frame19.json  frame19.txt  frame2.json  frame2.txt  frame20.json  frame20.txt  frame3.json  frame3.txt  frame4.json  frame4.txt  frame5.json  frame5.txt  frame6.json  frame6.txt  frame7.json  frame7.txt  frame8.json  frame8.txt  frame9.json  frame9.txt
